Add modal footer style display block for Bootstrap 4.

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,10 @@
-version: '1.0'
+version: '1.1'
 history:
+  '1.1':
+    date: '2018-01-01'
+    description: 'Add modal footer style display block for Bootstrap 4.'
   '1.0':
+    date: '2018-01-01'
     description: 'First version.'
 plugin: {  }
 sys:
