--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,8 @@
-version: '1.2.1'
+version: '1.3'
 history:
+  '1.3':
+    date: '2019-03-25'
+    description: Add class modal-fullscreen for usage with PluginBootstrap4Fs_modal. More mobile friendly.
   '1.2.1':
     date: '2019-01-22'
     description: 'Set focus on X button on upper right corner because of modal was scrolling down when focus on button at the bottom.'
