--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,8 @@
-version: '1.3'
+version: '1.4'
 history:
+  '1.4':
+    date: '2019-03-31'
+    description: Add modal-xl support for Bootstrap 4.
   '1.3':
     date: '2019-03-25'
     description: Add class modal-fullscreen for usage with PluginBootstrap4Fs_modal. More mobile friendly.
