CSS fix for IE.

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,8 @@
-version: '1.5'
+version: '1.6'
 history:
+  '1.6':
+    date: '2019-07-25'
+    description: CSS fix for IE.
   '1.5':
     date: '2019-04-09'
     description: Add readme.md.
