--- a/manifest.yml
+++ b/manifest.yml
@@ -1,38 +1,52 @@
-version: '1.6'
+version: 1.7.0
 history:
-  '1.6':
+  1.7.0:
+    date: '2021-05-25'
+    title: 'Reload button'
+    description: 'Add optional reload button.'
+  1.6.0:
     date: '2019-07-25'
+    title: 'CSS'
     description: CSS fix for IE.
-  '1.5':
+  1.5.0:
     date: '2019-04-09'
+    title: 'Readme'
     description: Add readme.md.
-  '1.4':
+  1.4.0:
     date: '2019-03-31'
+    title: 'Modal xl'
     description: Add modal-xl support for Bootstrap 4.
-  '1.3':
+  1.3.0:
     date: '2019-03-25'
+    title: 'Full screen'
     description: Add class modal-fullscreen for usage with PluginBootstrap4Fs_modal. More mobile friendly.
-  '1.2.1':
+  1.2.1:
     date: '2019-01-22'
-    description: 'Set focus on X button on upper right corner because of modal was scrolling down when focus on button at the bottom.'
-  '1.2':
+    title: 'Focus'
+    description: Set focus on X button on upper right corner because of modal was scrolling down when focus on button at the bottom.
+  1.2.0:
     date: '2018-01-08'
-    description: 'Set focus on close button.'
-  '1.1':
+    title: 'Close button'
+    description: Set focus on close button.
+  1.1.0:
     date: '2018-01-01'
-    description: 'Add modal footer style display block for Bootstrap 4.'
-  '1.0':
+    title: 'Footer'
+    description: Add modal footer style display block for Bootstrap 4.
+  1.0.0:
     date: '2018-01-01'
-    description: 'First version.'
-plugin: {  }
+    title: 'First version'
+    description: First version.
+plugin:
+  -
+    name: icons/octicons
+    version: 1.1.1
 sys:
   -
     name: mercury
     version:
-      - '1.0'
+      - 1.0
 php:
-  - '7.2'
+  - 7.2
 author: null
 links:
-  - 'https://github.com'
-description: ''
+description: 
