--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.7.2
+version: 1.8.0
 history:
+  1.8.0:
+    date: '2022-10-12'
+    title: 'Hide modal'
+    description: 'Hide modal if exist.'
   1.7.2:
     date: '2022-07-21'
     title: 'Close button'
