--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.10.1
+version: 1.11.0
 history:
+  1.11.0:
+    date: '2022-12-05'
+    title: 'Label'
+    description: Add label element id.
   1.10.1:
     date: '2022-10-18'
     title: 'Readme'
