--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.11.0
+version: 1.12.0
 history:
+  1.12.0:
+    date: '2023-03-22'
+    title: 'Bootstrap'
+    description: Add support for Bootstrap 5.
   1.11.0:
     date: '2022-12-05'
     title: 'Label'
