--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.13.0
+version: 1.14.0
 history:
+  1.14.0:
+    date: '2023-05-23'
+    title: 'Footer'
+    description: Handle display footer using Bootstrap version 5.
   1.13.0:
     date: '2023-04-14'
     title: 'Body background'
