--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.15.1
+version: 1.15.2
 history:
+  1.15.2:
+    date: '2023-09-13'
+    title: Content default
+    description: 'Set default value of content to empty string.'
   1.15.1:
     date: '2023-09-11'
     title: Versions
