--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.15.2
+version: 1.15.3
 history:
+  1.15.3:
+    date: '2024-01-11'
+    title: Console
+    description: 'Add console clear method when to click on modal header.'
   1.15.2:
     date: '2023-09-13'
     title: Content default
