--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.15.3
+version: 1.16.0
 history:
+  1.16.0:
+    date: '2024-01-17'
+    title: Alert and Confirm
+    description: 'Add Alert and Confirm. Readme improvements.'
   1.15.3:
     date: '2024-01-11'
     title: Console
