--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.18.0
+version: 1.18.1
 history:
+  1.18.1:
+    date: '2024-03-20'
+    title: Error handling
+    description: 'Error handling if modal method is not defined.'
   1.18.0:
     date: '2024-03-04'
     title: Alert
