--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.18.1
+version: 1.18.2
 history:
+  1.18.2:
+    date: '2025-01-29'
+    title: Backdrop
+    description: 'Add global parameter for backdrop.'
   1.18.1:
     date: '2024-03-20'
     title: Error handling
